--- a/index.html
+++ b/index.html
@@ -131,28 +131,28 @@
                 <ul class="icon-list">
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -168,28 +168,28 @@
                 <ul class="icon-list">
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -205,28 +205,28 @@
                 <ul class="icon-list">
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-link">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -380,7 +380,7 @@
             <li>
               <div class="icon-link">
                 <a href="" class="link-icon">
-                  <svg class="icon-icon" width="16px" height="16px">
+                  <svg class="icon-icon" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
@@ -389,7 +389,7 @@
             <li>
               <div class="icon-link">
                 <a href="" class="link-icon">
-                  <svg class="icon-icon" width="16px" height="16px">
+                  <svg class="icon-icon" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
@@ -398,7 +398,7 @@
             <li>
               <div class="icon-link">
                 <a href="" class="link-icon">
-                  <svg class="icon-icon" width="16px" height="16px">
+                  <svg class="icon-icon" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
