--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <li class="section-two-list-item">
               <div class="icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-Vector"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="s-header-three">Diligence</h3>
@@ -281,11 +281,40 @@
           <ul class="s-four-list">
             <li class="s-four-list-item">
               <div class="im-app">
-                <p class="section-four-pp">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage
-                </p>
+                <img
+                  src="./images/bank.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage
+                  </p>
+                </div>
+              </div>
+              <div class="portfolio-info">
+                <h3 class="section-four-h">Banking App</h3>
+                <p class="section-four-p">App</p>
+              </div>
+            </li>
+            <li class="s-four-list-item">
+              <div class="im-app">
+                <img
+                  src="./images/paym.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless payment"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage
+                  </p>
+                </div>
               </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Cashless Payment</h3>
@@ -293,60 +322,84 @@
               </div>
             </li>
             <li class="s-four-list-item">
-              <img
-                src="./images/bank.jpg"
-                width="360"
-                height="300"
-                alt="Banking App"
-              />
-              <div class="portfolio-info">
-                <h3 class="section-four-h">Banking App</h3>
-                <p class="section-four-p">App</p>
+              <div class="im-app">
+                <img
+                  src="./images/med.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage
+                  </p>
+                </div>
               </div>
-            </li>
-            <li class="s-four-list-item">
-              <img
-                src="./images/med.jpg"
-                width="360"
-                height="300"
-                alt="Meditation App"
-              />
               <div class="portfolio-info">
                 <h3 class="section-four-h">Meditation App</h3>
                 <p class="section-four-p">App</p>
               </div>
             </li>
             <li class="s-four-list-item">
-              <img
-                src="./images/taxi.jpg"
-                width="360"
-                height="300"
-                alt="Taxi service"
-              />
+              <div class="im-app">
+                <img
+                  src="./images/taxi.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi service"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Taxi Service</h3>
                 <p class="section-four-p">Marketing</p>
               </div>
             </li>
             <li class="s-four-list-item">
-              <img
-                src="./images/screen-illu.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustrations"
-              />
+              <div class="im-app">
+                <img
+                  src="./images/screen-illu.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Screen Illustrations</h3>
                 <p class="section-four-p">Design</p>
               </div>
             </li>
             <li class="s-four-list-item">
-              <img
-                src="./images/onlinecours.jpg"
-                width="360"
-                height="300"
-                alt="Online Courses"
-              />
+              <div class="im-app">
+                <img
+                  src="./images/onlinecours.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                />
+                <div class="overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Online Courses</h3>
                 <p class="section-four-p">Marketing</p>
