--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="footer-container container">
         <a class="logo-footer"
           >Web<span class="logo-blu-footer">Studio</span></a
         >
