--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
                 <h3 class="section-header-three">Mark Guerrero</h3>
                 <p class="section-three-p">Product Designer</p>
                 <ul class="icon-list">
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -166,28 +166,28 @@
                 <h3 class="section-header-three">Tom Ford</h3>
                 <p class="section-three-p">Frontend Developer</p>
                 <ul class="icon-list">
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -203,28 +203,28 @@
                 <h3 class="section-header-three">Camila Garcia</h3>
                 <p class="section-three-p">Marketing</p>
                 <ul class="icon-list">
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -423,7 +423,7 @@
         <p class="social-text">Social media</p>
         <ul class="icon-list">
           <li>
-            <div class="icon-link">
+            <div class="icon-list-item">
               <a href="" class="link-icon">
                 <svg class="icon-icon" width="16px" height="16px">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
@@ -432,7 +432,7 @@
             </div>
           </li>
           <li>
-            <div class="icon-link">
+            <div class="icon-list-item">
               <a href="" class="link-icon">
                 <svg class="icon-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
@@ -441,7 +441,7 @@
             </div>
           </li>
           <li>
-            <div class="icon-link">
+            <div class="icon-list-item">
               <a href="" class="link-icon">
                 <svg class="icon-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
@@ -450,7 +450,7 @@
             </div>
           </li>
           <li>
-            <div class="icon-link">
+            <div class="icon-list-item">
               <a href="" class="link-icon">
                 <svg class="icon-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
