--- a/index.html
+++ b/index.html
@@ -287,13 +287,12 @@
                   height="300"
                   alt="Banking App"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage
-                  </p>
-                </div>
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Banking App</h3>
@@ -308,13 +307,11 @@
                   height="300"
                   alt="Cashless payment"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Cashless Payment</h3>
@@ -329,13 +326,11 @@
                   height="300"
                   alt="Meditation App"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Meditation App</h3>
@@ -350,13 +345,12 @@
                   height="300"
                   alt="Taxi service"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage
-                  </p>
-                </div>
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Taxi Service</h3>
@@ -371,13 +365,11 @@
                   height="300"
                   alt="Screen Illustrations"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Screen Illustrations</h3>
@@ -392,13 +384,12 @@
                   height="300"
                   alt="Online Courses"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage
-                  </p>
-                </div>
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage
+                </p>
               </div>
               <div class="portfolio-info">
                 <h3 class="section-four-h">Online Courses</h3>
