--- a/index.html
+++ b/index.html
@@ -401,55 +401,57 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-container container">
-        <a class="logo-footer"
-          >Web<span class="logo-blu-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="social">
-        <p class="social-text">Social media</p>
-        <ul class="icon-list">
-          <li>
-            <div class="icon-list-item">
-              <a href="" class="link-icon">
-                <svg class="icon-icon" width="16px" height="16px">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-list-item">
-              <a href="" class="link-icon">
-                <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-list-item">
-              <a href="" class="link-icon">
-                <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-list-item">
-              <a href="" class="link-icon">
-                <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-        </ul>
+      <div class="container">
+        <div class="footer-container">
+          <a class="logo-footer"
+            >Web<span class="logo-blu-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social">
+          <p class="social-text">Social media</p>
+          <ul class="icon-list">
+            <li>
+              <div class="icon-list-item">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-list-item">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-list-item">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-list-item">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
