--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -310,7 +310,7 @@
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -329,7 +329,7 @@
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -349,7 +349,7 @@
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -368,7 +368,7 @@
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -388,7 +388,7 @@
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -400,58 +400,56 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-container">
-          <a class="logo-footer"
-            >Web<span class="logo-blu-footer">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="social">
-          <p class="social-text">Social media</p>
-          <ul class="icon-list">
-            <li>
-              <div class="icon-list-item">
-                <a href="" class="link-icon">
-                  <svg class="icon-icon" width="16px" height="16px">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="icon-list-item">
-                <a href="" class="link-icon">
-                  <svg class="icon-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="icon-list-item">
-                <a href="" class="link-icon">
-                  <svg class="icon-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="icon-list-item">
-                <a href="" class="link-icon">
-                  <svg class="icon-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>
+    <footer class="container footer">
+      <div class="footer-container">
+        <a class="logo-footer"
+          >Web<span class="logo-blu-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+      <div class="social">
+        <p class="social-text">Social media</p>
+        <ul class="icon-list">
+          <li>
+            <div class="icon-list-item">
+              <a href="" class="link-icon">
+                <svg class="icon-icon" width="16px" height="16px">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="icon-list-item">
+              <a href="" class="link-icon">
+                <svg class="icon-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="icon-list-item">
+              <a href="" class="link-icon">
+                <svg class="icon-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="icon-list-item">
+              <a href="" class="link-icon">
+                <svg class="icon-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
