--- a/index.html
+++ b/index.html
@@ -390,7 +390,8 @@
         </div>
       </section>
     </main>
-    <footer class="container footer">
+    <footer >
+      <div class="container footer">
       <div class="footer-container">
         <a class="logo-footer"
           >Web<span class="logo-blu-footer">Studio</span></a
@@ -441,6 +442,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </footer>
   </body>
 </html>
