--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
                 />
 
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -306,7 +308,9 @@
                   alt="Cashless payment"
                 />
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -323,7 +327,9 @@
                   alt="Meditation App"
                 />
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -341,7 +347,9 @@
                 />
 
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -358,7 +366,9 @@
                   alt="Screen Illustrations"
                 />
                 <p class="overlay">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="portfolio-info">
@@ -390,59 +400,51 @@
         </div>
       </section>
     </main>
-    <footer >
+    <footer>
       <div class="container footer">
-      <div class="footer-container">
-        <a class="logo-footer"
-          >Web<span class="logo-blu-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="social">
-        <p class="social-text">Social media</p>
-        <ul class="icon-list">
-          <li>
-            <div class="icon-list-item">
+        <div class="footer-container">
+          <a class="logo-footer"
+            >Web<span class="logo-blu-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social">
+          <p class="social-text">Social media</p>
+          <ul class="icon-list-footer">
+            <li class="icon-list-item-footer">
               <a href="" class="link-icon">
-                <svg class="icon-icon" width="16px" height="16px">
+                <svg class="icon-icon-footer" width="16px" height="16px">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-list-item">
+            </li>
+            <li class="icon-list-item-footer">
               <a href="" class="link-icon">
-                <svg class="icon-icon" width="16" height="16">
+                <svg class="icon-icon-footer" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-list-item">
+            </li>
+            <li class="icon-list-item-footer">
               <a href="" class="link-icon">
-                <svg class="icon-icon" width="16" height="16">
+                <svg class="icon-icon-footer" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-list-item">
+            </li>
+            <li class="icon-list-item-footer-footer">
               <a href="" class="link-icon">
                 <svg class="icon-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
-            </div>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
     </footer>
   </body>
 </html>
