--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           <ul class="icon-list-footer">
             <li class="icon-list-item-footer">
               <a href="" class="link-icon">
-                <svg class="icon-icon-footer" width="16px" height="16px">
+                <svg class="icon-icon-footer" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
