--- a/index.html
+++ b/index.html
@@ -240,28 +240,28 @@
                 <h3 class="section-header-three">Daniel Wilson</h3>
                 <p class="section-three-p">UI Designer</p>
                 <ul class="icon-list">
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="icon-link">
+                  <li class="icon-list-item">
                     <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -435,7 +435,7 @@
                 </svg>
               </a>
             </li>
-            <li class="icon-list-item-footer-footer">
+            <li class="icon-list-item-footer">
               <a href="" class="link-icon">
                 <svg class="icon-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
