--- a/index.html
+++ b/index.html
@@ -242,28 +242,28 @@
                 <ul class="icon-list">
                   <li class="icon-list-item">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon-footer" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-list-item">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon-footer" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-list-item">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon-footer" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-list-item">
                     <a href="" class="link-icon">
-                      <svg class="icon-icon" width="16px" height="16px">
+                      <svg class="icon-icon-footer" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
