--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             </li>
             <li class="icon-list-item-footer">
               <a href="" class="link-icon">
-                <svg class="icon-icon" width="24" height="24">
+                <svg class="icon-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
